main.tf
provider "aws" {
  region = var.region
}

# 🔐 Security Group
resource "aws_security_group" "web_sg" {
  name = "web-sg"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # ✅ เพิ่ม MySQL
  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
  from_port   = 8001
  to_port     = 8001
  protocol    = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
}
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# 🔑 Key Pair (แก้ path ให้ตรง Windows)
resource "aws_key_pair" "deployer" {
  key_name   = "my-key"
  public_key = file("D:/key/id_ed25519.pub")
}

# 🖥️ EC2
resource "aws_instance" "web" {
  ami           = "ami-0df7a207adb9748c7"
  instance_type = var.instance_type

  security_groups = [aws_security_group.web_sg.name]

  # ✅ เพิ่มตรงนี้
  key_name = aws_key_pair.deployer.key_name

  user_data = <<-EOF
              #!/bin/bash
              apt update -y
              apt install -y nodejs npm git
              git clone https://github.com/YOUR_USERNAME/YOUR_REPO.git /app
              cd /app
              npm install
              npm start
              EOF

  tags = {
    Name = "flower-shop-web"
  }
}

# 🛢️ RDS MySQL
resource "aws_db_instance" "mysql" {
  allocated_storage    = 20
  engine               = "mysql"
  engine_version       = "8.0"
  instance_class       = "db.t3.micro"
  db_name              = "flowershop"
  username             = var.db_username
  password             = var.db_password

  skip_final_snapshot  = true
  publicly_accessible  = true

  # ✅ สำคัญมาก
  vpc_security_group_ids = [aws_security_group.web_sg.id]
}
